refactor: 包名中的 Health 首字母改为小写

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: SimpleHealth
 version: '${version}'
-main: club.asynclab.simpleHealth.SimpleHealth
+main: club.asynclab.simplehealth.SimpleHealth
 api-version: '1.21'
 depend: [ Kotlin ]
